--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "babel-plugin-macros": "^3.1.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
